Revision history for DBIx::Class::ResultSet::RecursiveUpdate

{{ $NEXT }}

0.41      2020-05-13 13:13:33+02:00 Europe/Vienna
    - Fix missing Test::Exception test dependency
    - Get rid of discard_changes for each created row
      To further reduce the number of queries. This required to remove support
      for populating a column used by a has_many relationship by a related row.
    - Reduce select queries for has_many relationships where the foreign key
      column and the relationship is named the same and the related row is
      specified as a hashref containing the foreign column
    - Don't execute select queries for any relationships of created rows
      because no related rows can already exist

0.40      2019-10-29 14:16:34+01:00 Europe/Vienna
    - Fix missing Try::Tiny dependency
    - Don't try to find a row by primary key if not all primary key columns are
      defined
    - Reduce select queries for has_many relationships
      to one per non-prefetched or none for prefetched has_many relationships
      down from one per related row even for prefetched relationships
    - Don't execute a delete/update query for has_many relationships if no
      rows need to be deleted or unlinked by setting their foreign key
      column(s) to NULL
    - Preserve prefetched related resultsets on row update
    - Stable update order by sorting all columns and relationships

0.34      2014-02-06 23:37:32 America/New_York
    - More changes to support custom CODE relationship condition

0.33      2014-02-06 14:58:54 America/New_York
    - Don't die on custom CODE relationship condition

0.32      2014-01-20 19:15:29+01:00 Europe/Vienna
    - 'id' can't be used any more as an alias for the primary key column name
      as DBIx::Class doesn't treat it special
    - Try to construct a new row object with all given update attributes and
      use it to find the row in the database

0.31 Wed Nov 6, 2013
    - Fixed failing test when DBIC_TRACE_PROFILE is set